--- a/src/correction.css
+++ b/src/correction.css
@@ -60,6 +60,10 @@
   margin-right: 0 !important;
 }
 
+.modal__btn-cancel {
+  margin-left: 15px !important;
+}
+
 .tippy-content {
   background-color: white !important;
   -webkit-box-shadow: 0px 0px 8px #51525a29;
@@ -85,3 +89,15 @@
 .tippy-tooltip[data-placement^="top"] > .tippy-arrow {
   border-top-color: white !important;
 }
+
+/* .apexcharts-canvas {
+  min-height: 100px !important;
+  max-height: 100px !important;
+  height: 100px !important;
+}
+
+.apexcharts-canvas svg {
+  min-height: 100px !important;
+  max-height: 100px !important;
+  height: 100px !important;
+} */
