--- a/src/correction.css
+++ b/src/correction.css
@@ -66,7 +66,6 @@
 
 .tippy-content {
   background-color: white !important;
-  -webkit-box-shadow: 0px 0px 8px #51525a29;
   box-shadow: 0px 0px 8px #51525a29;
 }
 
@@ -101,3 +100,18 @@
   max-height: 100px !important;
   height: 100px !important;
 } */
+.header__user .list-drop {
+  width: auto;
+  top: 0;
+}
+.list-drop--primary {
+  display: -webkit-box;
+  display: flex;
+  position: relative;
+  opacity: 1;
+  box-shadow: none;
+  border-radius: 5px;
+  z-index: 9999;
+  overflow: hidden;
+  pointer-events: all;
+}
