--- a/src/correction.css
+++ b/src/correction.css
@@ -103,7 +103,7 @@
 a:visited,
 a:link {
   text-decoration: none;
-  color:inherit;
+  color: inherit;
 }
 
 .header__user .list-drop {
@@ -120,4 +120,8 @@ a:link {
   z-index: 9999;
   overflow: hidden;
   pointer-events: all;
+}
+
+.media__text {
+  text-transform: capitalize;
 }
